[project]
name = "skyex"
version = "0.1.0"
description = "SkyEX Telegram exchange bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "scripts",
    "migrations",
]

[tool.ruff.lint]
# Start with a pragmatic, high-signal set. Tighten over time.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "BLE",  # flake8-blind-except (BLE001 — bans bare/broad `except`)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length — not enforced yet (legacy long lines)
    "B008",   # function call in default arg — common with aiogram/DI
    "RUF001", # ambiguous unicode in strings — Cyrillic UI text is legitimate
    "RUF002", # ambiguous unicode in docstrings — same
    "RUF003", # ambiguous unicode in comments — same
    # --- Deferred to Stage 6 (косметика); re-enable once addressed ---
    "SIM117", # nested `with` (acquire + transaction) — nested form keeps txn-scope explicit
    "RUF012", # mutable class defaults need `ClassVar[...]` — mechanical, deferred
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports

[tool.ruff.lint.isort]
known-first-party = ["app", "handlers", "services", "db_asyncpg", "gutils"]

[tool.mypy]
python_version = "3.11"
# Soft mode for the initial rollout. Tighten per-layer (e.g. db_asyncpg, services)
# toward `disallow_untyped_defs` / `strict` once each layer is clean.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = false
warn_unused_ignores = false
exclude = '(^|/)(\.venv|venv|scripts|migrations)/'
